--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "20.14.12",
+    "@types/react": "18.3.3",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
